Fixed fonts on iOS devices

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -26,7 +26,7 @@ img {
       url('../fonts/FuturaPT-Light.woff') format('woff');
   font-weight: 400;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Futura PT Regular';
@@ -34,7 +34,7 @@ img {
       url('../fonts/FuturaPT-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Futura PT Medium';
@@ -42,7 +42,7 @@ img {
       url('../fonts/FuturaPT-Medium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Futura PT Medium Oblique';
@@ -50,7 +50,7 @@ img {
       url('../fonts/FuturaPT-Medium-Oblique.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Futura PT Bold';
@@ -58,65 +58,30 @@ img {
       url('../fonts/FuturaPT-Bold.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: block;
-}
-/* vietnamese */
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afT3GLQjUwkQ1OQ.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
 }
-/* latin-ext */
 @font-face {
-  font-family: 'Muli';
+  font-family: 'Mulish';
+  src: url('../fonts/Mulish-Light.woff2') format('woff2'),
+      url('../fonts/Mulish-Light.woff') format('woff');
+  font-weight: normal;
   font-style: normal;
-  font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afTzGLQjUwkQ1OQ.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
-/* latin */
 @font-face {
-  font-family: 'Muli';
+  font-family: 'Mulish Bold';
+  src: url('../fonts/Mulish-Bold.woff2') format('woff2'),
+      url('../fonts/Mulish-Bold.woff') format('woff');
+  font-weight: normal;
   font-style: normal;
-  font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afTLGLQjUwkQ.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* vietnamese */
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afT3GLQjUwkQ1OQ.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+.pace .pace-progress,
+.preloader-background,
+.preloader-wrap {
+  display: none !important;
 }
-/* latin-ext */
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afTzGLQjUwkQ1OQ.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/muli/v22/7Auwp_0qiz-afTLGLQjUwkQ.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 .preloader-background {
-  /*display: none !important;*/
   width: 100%;
   height: 100%;
   position: fixed;
@@ -126,7 +91,6 @@ img {
   background: #fff;
 }
 .preloader-wrap {
-  /*display: none !important;*/
   width: 100%;
   height: 100%;
   position: fixed;
@@ -181,7 +145,6 @@ img {
   transition: all 1.2s ease;
 }
 .pace .pace-progress {
-  /*display: none !important;*/
   background-color: rgb(107, 166, 255);
   position: fixed;
   z-index: 101;
@@ -378,8 +341,7 @@ img {
 }
 .block p {
   font-size: 17px; 
-  font-family: 'Muli', 'sans-serif';
-  font-weight: 300;
+  font-family: 'Mulish';
   text-align: left;
 }
 .block h1 {
@@ -519,7 +481,7 @@ img {
 .testimonial-image p:nth-child(1) {
   color: #484848;
   font-size: 17px; 
-  font-weight: bold;
+  font-family: 'Mulish Bold';
 }
 .testimonial-image picture {
   display: block;
@@ -774,7 +736,7 @@ img {
   font-size: 17px;
   color: #515151;
   position: absolute;
-  font-family: 'Muli', 'sans-serif';
+  font-family: 'Mulish';
   font-weight: 300;
   height: auto;
   width: auto;
@@ -798,8 +760,7 @@ img {
   text-align: left;
   font-size: 23px;
   margin-top: 12px;
-  font-family: 'Muli', 'sans-serif';
-  font-weight: 700;
+  font-family: 'Mulish Bold';
   padding-left: 25px;
   color: #515151;
 }
@@ -963,7 +924,7 @@ input:-webkit-autofill:active  {
   height: 40px;
 }
 textarea, input {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   font-size: 1em;
   height: 60px;
   padding: 5px 50px 0px 15px;
@@ -1014,7 +975,7 @@ form .col-md-12 textarea {
 #wedding-datepicker input {
   display: block;
   width: 294px;
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   text-align: left;
   color: transparent !important;
   border: none;
@@ -1029,7 +990,7 @@ form .col-md-12 textarea {
 #wedding-datepicker .date-text {
   position: absolute;
   left: 12px;
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   margin: auto;
   color: #555 !important;
   z-index: 5;
@@ -1045,7 +1006,7 @@ form .col-md-12 textarea {
   position: relative;
   display: inline-block;
   float: left;
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   font-weight: 300;
   text-align: left;
   border: 1px solid rgba(30, 101, 174, 0.7);
@@ -1090,7 +1051,7 @@ label {
   background: white;
   padding: 0 5px 0 5px;
   border-radius: 6px;
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   font-weight: 300;
 }
 .col-md-12 label {
@@ -1111,7 +1072,7 @@ label {
   transform: scale(1.005);
 }
 .datepicker.dropdown-menu {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   font-weight: 300;
   padding: 0;
   background-clip: border-box;
@@ -1278,7 +1239,7 @@ th.next, th.prev {
   transition: all 0.5s;
   background: #1e65ae;
   font-size: 16px;
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   font-weight: 300; 
   border-radius: 6px;
   position: absolute;
@@ -1315,7 +1276,7 @@ footer {
   position: relative;
   z-index: 2;
   overflow: hidden;
-  font-family: 'Muli', 'sans-serif';
+  font-family: 'Mulish';
   font-weight: 300;
   transition: all 0.3s ease;
 }
@@ -1762,7 +1723,7 @@ hr {
 .deposit-btn-trigger {
   width: 150px;
   display: block;
-  font-family: 'Muli', 'sans-serif';
+  font-family: 'Mulish';
   font-weight: 300;
   margin:0 auto;
   padding: 1em 0;
